--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release
 on:
   push:
     tags:
-      - '*'
+      - 'v*'
 jobs:
   go_releaser:
     name: GoReleaser
@@ -17,6 +17,18 @@ jobs:
         uses: actions/checkout@v2
       - name: Unshallow
         run: git fetch --prune --unshallow
+      - name: lint
+        run: |
+          export PATH=$PATH:$(go env GOPATH)/bin
+          go get github.com/bflad/tfproviderlint/cmd/tfproviderlint 
+          tfproviderlint ./...
+      - name: Import GPG key
+        id: import_gpg
+        uses: crazy-max/ghaction-import-gpg@v2
+        env:
+          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+          PASSPHRASE: ${{ secrets.PASSPHRASE }}
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v1
         with:
