--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,18 +1,45 @@
+# Visit https://goreleaser.com for documentation on how to customize this
+# behavior.
+
 before:
   hooks:
     - go mod tidy
-    - go test -v ./...
 builds:
-  - goos: [linux, darwin, windows]
-    goarch: [amd64]
-    binary: 'terraform-provider-msgraph{{if eq (printf "%.8s" .Version) "snapshot"}}_v{{.Version}}{{end}}'
+- env:
+  - CGO_ENABLED=0
+  goos:
+    - freebsd
+    - openbsd
+    - solaris
+    - windows
+    - linux
+    - darwin
+  goarch:
+    - amd64
+    - '386'
+    - arm
+    - arm64
+  ignore:
+    - goos: darwin
+      goarch: '386'
+    - goos: openbsd
+      goarch: arm
+    - goos: openbsd
+      goarch: arm64
+    - goos: freebsd
+      goarch: arm64
+  binary: '{{ .ProjectName }}_v{{ .Version }}'
 archives:
-  - name_template: '{{.ProjectName}}_{{if ne (printf "%.8s" .Version) "snapshot"}}v{{end}}{{.Version}}_{{ .Os }}_{{ .Arch }}'
-    format_overrides:
-      - goos: windows
-        format: zip
+- format: zip
+  name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
 checksum:
-  name_template: 'checksums.txt'
-snapshot:
-  name_template: "snapshot-{{.ShortCommit}}"
+  name_template: '{{ .ProjectName }}_{{ .Version }}_SHA256SUMS'
+  algorithm: sha256
+signs:
+  - artifacts: checksum
+    args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${signature}", "--detach-sign", "${artifact}"]
+release:
+  # Visit your project's GitHub Releases page to publish this release.
+  draft: true
 changelog:
+  skip: true
