--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       - name: lint
         run: |
           export PATH=$PATH:$(go env GOPATH)/bin
-          go get github.com/bflad/tfproviderlint/cmd/tfproviderlint 
+          GOMODULE=off go get github.com/bflad/tfproviderlint/cmd/tfproviderlint 
           tfproviderlint ./...
       - name: Import GPG key
         id: import_gpg
