--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,8 @@ jobs:
       - name: lint
         run: |
           export PATH=$PATH:$(go env GOPATH)/bin
-          GOMODULE=off go get github.com/bflad/tfproviderlint/cmd/tfproviderlint 
+          cd && go get github.com/bflad/tfproviderlint/cmd/tfproviderlint 
+          cd ${github.workspace}
           tfproviderlint ./...
       - name: Import GPG key
         id: import_gpg
