--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           export PATH=$PATH:$(go env GOPATH)/bin
           cd && go get github.com/bflad/tfproviderlint/cmd/tfproviderlint 
-          cd ${github.workspace}
+          cd -
           tfproviderlint ./...
       - name: Import GPG key
         id: import_gpg
@@ -32,11 +32,12 @@ jobs:
         if: always()
 
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v1
+        uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
         if: always()
   
